Code updates to java 17.